fix: output word wrap

--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ textarea::placeholder{
     font-size: 1.5rem;
     padding: 0.5rem;
     margin: auto;
+ 
+  word-wrap: break-word;
 }
 
 .textLeft{
